# hb_vs_rb

./: Cargo.toml
src/: main.rs
texts/: kawthar.txt
