[package]
name = "hb_vs_rb"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = " 0.2.26"
harfbuzz_rs = { git = "https://github.com/asibahi/harfbuzz_rs.git" }
# harfbuzz_rs = "2.0.1" # crates.io version
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
] }
imageproc = "0.25"
rustybuzz = "0.14"

[lints.clippy]
filter_map_bool_then = "allow"
